--- a/mod_data_extractor/mod_data_extractor.csproj
+++ b/mod_data_extractor/mod_data_extractor.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="CUE4Parse" Version="1.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Oodle.net" Version="2.0.2" />
