--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,57 +1,57 @@
 name: Build and Publish
 
 on:
-  push:
-    branches:
-      - master
+  release:
+    types: [published]
 
 jobs:
-  build-and-publish:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up .NET
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 8.x.x
-
-      - name: Build for Windows x64
-        run: dotnet publish -c Release -r win-x64
-
-      - name: Build for MacOS x64
-        run: dotnet publish -c Release -r osx-x64
-
-      - name: Build for Linux x64
-        run: dotnet publish -c Release -r linux-x64
-
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Windows artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: Windows Artifact
-          path: /home/runner/work/csharp-asa-mod-data-extractor/csharp-asa-mod-data-extractor/mod_data_extractor/bin/Release/net8.0/win-x64/publish/
-
-      - name: Upload MacOS artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: MacOS Artifact
-          path: /home/runner/work/csharp-asa-mod-data-extractor/csharp-asa-mod-data-extractor/mod_data_extractor/bin/Release/netcoreapp8.0/osx-x64/publish
-
-      - name: Upload Linux artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: Linux Artifact
-          path: /home/runner/work/csharp-asa-mod-data-extractor/csharp-asa-mod-data-extractor/mod_data_extractor/bin/Release/netcoreapp8.0/linux-x64/publish
+    release:
+      name: Release
+      strategy:
+        matrix:
+          kind: ['linux', 'windows', 'macOS']
+          include:
+            - kind: linux
+              os: ubuntu-latest
+              target: linux-x64
+            - kind: windows
+              os: windows-latest
+              target: win-x64
+            - kind: macOS
+              os: macos-latest
+              target: osx-x64
+      runs-on: ${{ matrix.os }}
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v1
+  
+        - name: Setup dotnet
+          uses: actions/setup-dotnet@v1
+          with:
+            dotnet-version: 8.x.x
+  
+        - name: Build
+          shell: bash
+          run: |
+            release_name="mod_data_extractor-${{ matrix.target }}"
+  
+            # Build everything
+            dotnet publish --self-contained true --runtime "${{ matrix.target }}" -p:PublishSingleFile=true -c Release -o "$release_name"
+  
+            # Pack files
+            if [ "${{ matrix.target }}" == "win-x64" ]; then
+              # Pack to zip for Windows
+              7z a -tzip "${release_name}.zip" "./${release_name}/*"
+            else
+            tar czvf "${release_name}.tar.gz" "$release_name"
+            fi
+  
+            # Delete output directory
+            rm -r "$release_name"
+  
+        - name: Publish
+          uses: softprops/action-gh-release@v1
+          with:
+            files: "mod_data_extractor*"
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
