--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/mod_data_extractor/bin/Debug/net8.0/mod_data_extractor.dll",
-            "args": ["--debug", "--input", "C:\\Users\\jorda\\Desktop\\CSMDE", "--output", "C:\\Users\\jorda\\Desktop\\CSMDE\\output", "--badfile", "C:\\Users\\jorda\\Desktop\\CSMDE\\badfiles.txt", "--file-types", "umap"],
+            "args": ["--debug", "--input", "C:\\Users\\jorda\\Desktop\\CSMDE", "--output", "C:\\Users\\jorda\\Desktop\\CSMDE\\output", "--badfile", "C:\\Users\\jorda\\Desktop\\CSMDE\\badfiles.txt", "--file-types", "uasset"],
             "cwd": "${workspaceFolder}/mod_data_extractor",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
