--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -5,47 +5,50 @@ on:
     types: [published]
 
 jobs:
-    release:
-      name: Release
-      strategy:
-        matrix:
-          kind: ['windows']
-          include:
-            - kind: windows
-              os: windows-latest
-              target: win-x64
-      runs-on: ${{ matrix.os }}
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v1
-  
-        - name: Setup dotnet
-          uses: actions/setup-dotnet@v1
-          with:
-            dotnet-version: 8.x.x
-  
-        - name: Build
-          shell: bash
-          run: |
-            release_name="mod_data_extractor-${{ matrix.target }}"
-  
-            # Build everything
-            dotnet publish --self-contained true --runtime "${{ matrix.target }}" -p:PublishSingleFile=true -c Release -o "$release_name"
-  
-            # Pack files
-            if [ "${{ matrix.target }}" == "win-x64" ]; then
-              # Pack to zip for Windows
-              7z a -tzip "${release_name}.zip" "./${release_name}/*"
-            else
+  release:
+    name: Release
+    strategy:
+      matrix:
+        kind: ['windows']
+        include:
+          - kind: windows
+            os: windows-latest
+            target: win-x64
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+          fetch-depth: 0
+
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 8.x.x
+
+      - name: Build
+        shell: bash
+        run: |
+          release_name="mod_data_extractor-${{ matrix.target }}"
+
+          # Build everything
+          dotnet publish --self-contained true --runtime "${{ matrix.target }}" -p:PublishSingleFile=true -c Release -o "$release_name"
+
+          # Pack files
+          if [ "${{ matrix.target }}" == "win-x64" ]; then
+            # Pack to zip for Windows
+            7z a -tzip "${release_name}.zip" "./${release_name}/*"
+          else
             tar czvf "${release_name}.tar.gz" "$release_name"
-            fi
-  
-            # Delete output directory
-            rm -r "$release_name"
-  
-        - name: Publish
-          uses: softprops/action-gh-release@v1
-          with:
-            files: "mod_data_extractor*"
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          fi
+
+          # Delete output directory
+          rm -r "$release_name"
+
+      - name: Publish
+        uses: softprops/action-gh-release@v1
+        with:
+          files: "mod_data_extractor*"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
