--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
 
 [submodule "CUE4Parse"]
     path = CUE4Parse
-	url = https://github.com/FabianFG/CUE4Parse.git
+	url = https://github.com/jordan-dalby/CUE4Parse.git
